--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
@@ -96,7 +96,8 @@
             <i class="delete icon"></i>
             ลบ
           </button>
-          <button type="button" (click)="setRL(0)" class="ui mini primary button {{rl && rlLen > 0 ? 'disabled' : ''}}">
+          <button type="button" (click)="setRL(0)" class="ui mini primary button">
+            <!-- {{rl && rlLen > 0 ? 'disabled' : ''}} -->
             <i class="setting icon"></i>
             กำหนดเงื่อนไข RL
           </button>
