--- a/workspace/ims-client/src/app/buckwaframework/common/components/breadcrumb/breadcrumb.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/common/components/breadcrumb/breadcrumb.component.html
@@ -10,7 +10,7 @@
       <div class="ui breadcrumb" *ngFor="let item of route;let i = index">
 
         <!-- Linked and Can Route -->
-        <a class="section" *ngIf="item.route != '#'" [routerLink]="item.route" href="javascript:void(0)">{{item.label}}</a>
+        <a class="section" *ngIf="item.route != '#'" routerLink="/{{item.route}}" href="javascript:void(0)">{{item.label}}</a>
         <i class="right chevron icon divider" *ngIf="item.route != '#' && i != route.length-1"></i>
 
         <!-- Active -->
