--- a/workspace/ims-client/src/app/buckwaframework/common/components/breadcrumb/breadcrumb.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/common/components/breadcrumb/breadcrumb.component.html
@@ -1,6 +1,6 @@
 <div class="ui grid">
   <div class="sixteen wide column bread">
-    <div class="ui segment">
+    <div class="ui segment shadow">
 
       <div class="ui breadcrumb">
         <a class="section" routerLink="/home" href="javascript:void(0)">หน้าหลัก</a>
