add button tutorial and change bg color

--- a/workspace/ims-client/src/app/buckwaframework/project/pages/home/home.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/home/home.html
@@ -1,177 +1,8 @@
 <div class="ui grid">
-    <div class="eight wide column">
-        <div class="ui top attached header">
-            <span>Message</span>
-        </div>
-        <div class="ui attached segment">
-            <div class="ui form">
-                <div class="fields">
-                    <div class="sixteen wide field">
-                        <div class="ui grid">
-                            <div class="center aligned row">
-                                <div class="column">
-                                    <div class="ui mini button" (click)="showMessage()">
-                                        Default
-                                    </div>
-                                    <div class="ui mini positive button" (click)="showMessage('S')">
-                                        Success
-                                    </div>
-                                    <div class="ui mini negative button" (click)="showMessage('E')">
-                                        Error
-                                    </div>
-                                    <div class="ui mini blue button" (click)="showMessage('I')">
-                                        Into
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="eight wide column">
-        <div class="ui top attached header">
-            <span>Modal</span>
-        </div>
-        <div class="ui attached segment">
-            <p>TODO later</p>
-        </div>
-    </div>
-    <div class="sixteen wide column">
-        <div class="ui top attached header">
-            <span>Dropdown</span>
-        </div>
-        <div class="ui attached segment">
-            <div class="ui form">
-                <div class="fields">
-                    <div class="four wide field">
-                        <label>Region</label>d
-                    </div>
-                    <div class="four wide field">
-                        <label>Country</label>d
-                    </div>
-                    <div class="four wide field">
-                        <label>Province</label>d
-                    </div>
-                    <div class="four wide field">
-                        <label>District</label>d
-                    </div>
-                </div>
-
-                <div class="fields">
-                    <div class="four wide field">
-                        <label>Region</label>
-                        <div class="ui selection dropdown">
-                            <input type="hidden" name="gender">
-                            <i class="dropdown icon"></i>
-                            <div class="default text">Region</div>
-                            <div class="menu">
-                                <div class="item" data-value="1">Male</div>
-                                <div class="item" data-value="0">Female</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="four wide field">
-                        <label>Country</label>
-                        <div class="ui selection dropdown">
-                            <input type="hidden" name="gender">
-                            <i class="dropdown icon"></i>
-                            <div class="default text">Country</div>
-                            <div class="menu">
-                                <div class="item" data-value="1">Male</div>
-                                <div class="item" data-value="0">Female</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="four wide field">
-                        <label>Province</label>
-                        <div class="ui selection dropdown">
-                            <input type="hidden" name="gender">
-                            <i class="dropdown icon"></i>
-                            <div class="default text">Province</div>
-                            <div class="menu">
-                                <div class="item" data-value="1">Male</div>
-                                <div class="item" data-value="0">Female</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="four wide field">
-                        <label>District</label>
-                        <div class="ui selection dropdown">
-                            <input type="hidden" name="gender">
-                            <i class="dropdown icon"></i>
-                            <div class="default text">District</div>
-                            <div class="menu">
-                                <div class="item" data-value="1">Male</div>
-                                <div class="item" data-value="0">Female</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="ui grid">
-                    <div class="right aligned row">
-                        <div class="column">
-                            <div class="ui mini button" (click)="showMessage()">
-                                Reset
-                            </div>
-                            <div class="ui mini positive button" (click)="showMessage('S')">
-                                Save
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-    <div class="sixteen wide column">
-        <div class="ui top attached header">Cards</div>
-        <div class="ui attached segment">
-            <div class="ui cards">
-                <div class="card">
-                    <div class="content">
-                        <img class="right floated mini ui image" src="http://placehold.it/64x64">
-                        <div class="header">
-                            Elliot Fu
-                        </div>
-                        <div class="meta">
-                            Friends of Veronika
-                        </div>
-                        <div class="description">
-                            Elliot requested permission to view your contact details
-                        </div>
-                    </div>
-                    <div class="extra content">
-                        <div class="ui two buttons">
-                            <div class="ui basic green button">Approve</div>
-                            <div class="ui basic red button">Decline</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="content">
-                        <img class="right floated mini ui image" src="http://placehold.it/64x64">
-                        <div class="header">
-                            Jenny Hess
-                        </div>
-                        <div class="meta">
-                            New Member
-                        </div>
-                        <div class="description">
-                            Jenny wants to add you to the group
-                            <b>best friends</b>
-                        </div>
-                    </div>
-                    <div class="extra content">
-                        <div class="ui two buttons">
-                            <div class="ui basic green button">Approve</div>
-                            <div class="ui basic red button">Decline</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="sixteen wide column" id="buttons">
+        <div class="ui top attached header">Buttons</div>
+        <div class="ui bottom attached segment">
+            <ui-buttons></ui-buttons>
         </div>
     </div>
 </div>
