--- a/workspace/ims-client/src/app/buckwaframework/project/pages/home/home.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/home/home.html
@@ -1,8 +1,20 @@
 <div class="ui grid">
+    <div class="sixteen wide column" id="breadcrumb">
+        <div class="ui top attached header">Breadcrumb</div>
+        <div class="ui bottom attached segment">
+            <ui-breadcrumb></ui-breadcrumb>
+        </div>
+    </div>
     <div class="sixteen wide column" id="buttons">
         <div class="ui top attached header">Buttons</div>
         <div class="ui bottom attached segment">
             <ui-buttons></ui-buttons>
+        </div>
+    </div>
+    <div class="sixteen wide column" id="segments">
+        <div class="ui top attached header">Segments</div>
+        <div class="ui secondary bottom attached segment">
+            <ui-segments></ui-segments>
         </div>
     </div>
 </div>
